--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/src/Angular.js"></script>
-    <script src="/app.js"></script>  
+    <script src="/main.js"></script>  
     <title>Document</title>
 
 </head>
-<body ng-app="myApp">
+<!-- <body ng-app="myApp"> -->
+<body ng-app="mainApp" ng-controller="mainAppController">
 
-    <outer-comp username = "abbas"></outer-comp>
+    <personnel-comp username="name" show-func="showFunc()" obj="obj"></personnel-comp>
+    name:{{name }}
+
+    <!-- <outer-comp username = "abbas"></outer-comp> -->
   
 </body>
 </html>
